--- a/css/scss/layouts/_bio.scss
+++ b/css/scss/layouts/_bio.scss
@@ -1,7 +1,7 @@
 
-/** 
-BIOGRAPHIE
-*/
+/**************************
+* SECTION BIOGRAPHIE
+*************************/
 .bio{
     width: 100%;
     display: flex;
@@ -54,21 +54,23 @@ BIOGRAPHIE
         }
 
         &-item{
-            padding: 0.2rem .5rem;
-            margin: .2rem .2rem;
-            border: 0.5px solid #C4C4C4;
-            box-sizing: border-box;
-            border-radius: 11px;
-            text-align: center;
-            font-size: 12px;
-            font-weight: 500;
-
-            a{
+            a{  
+                padding: 0.2rem .5rem;
+                margin: .2rem .2rem;
+                border: 0.5px solid #C4C4C4;
+                box-sizing: border-box;
+                border-radius: 11px;
+                text-align: center;
+                font-size: 12px;
+                font-weight: 500;
                 color: $color_primary_one;
                 transition-duration: 0.2s;
                 &:focus,&:hover{
                   font-weight: bold;
+                  background-color: $color_primary_one;
+                  color: $color_white;
                   font-size: 20px;
+                  border: 0.5px solid $color_primary_one;
                 }
             }
         }
@@ -76,10 +78,10 @@ BIOGRAPHIE
     }
 }
 
-/**
-* SECTION FILTRE
-*/
 
+/**************************
+* SECTION FILTRE
+**************************/
 .filter{
   display: flex;
   align-items: flex-start;
@@ -99,6 +101,14 @@ BIOGRAPHIE
     border: none;
     cursor: pointer;
     border-radius: 5px;
+
+    &:focus,&:hover,&:active{
+      background: $color_primary_two;
+      color: $color_black;
+      font-weight: bold;
+    }
+
+
     
   }
 
@@ -129,29 +139,40 @@ BIOGRAPHIE
         padding: 12px 16px;
         text-decoration: none;
         display: block;
-        &:hover {background-color: $color_primary_two}
+        &:focus,&:hover,&:active{
+          background: $color_primary_two;
+          color: $color_black;
+          font-weight: bold;
+        }
       }    
 
     }
   
-    &:hover{
+    &:hover,&:focus,&:active{
       background-color: $color_primary_two;
       svg {    
         animation: rotation .5s linear;
         animation-fill-mode: both;
+        path{
+          stroke : $color_black;
+        }
       }
     }
   }
-}
 
+}//.filter{
 
-
+/* KEYFRAME SVG ANGLE */
 @keyframes rotation {
   100% {
     transform: rotate(180deg);
   }
 }
 
+
+/**************************
+* BUTTON
+**************************/
 .btn{
   padding: .2rem 1rem ;
   font-weight: 700;
@@ -173,20 +194,31 @@ BIOGRAPHIE
     background-color: $color_primary_one;
     border: 1px solid $color_primary_one;
     color: $color_white;
+    transition: 0.2s;
+    &:focus,&:hover,&:active{
+      border: 1px solid $color_primary_two;
+      background: $color_primary_two;
+      color: $color_black;
+      font-weight: bold;
+      transform: scale(1.1);
+    }
   }
 }
 
 
+/**************************
+* SECTION PORTFOLIO
+**************************/
 .portfolio{
     &-content{
         margin-bottom: 20px;
     }
 
     &-link{
-      transition-duration: 0.2s;
-      &:focus,&:hover{
-          display: block;
-          transform: scale(1.04);
+      &:focus,&:hover,&:active{
+        display: block;
+          border: 2px solid $color_primary_two;
+          color: $color_primary_two;
       }
     }
 
@@ -226,7 +258,9 @@ BIOGRAPHIE
 }
 
 
-/* The ligthbox (background) */
+/**************************
+* The ligthbox
+**************************/
 .ligthbox {
     display: none;
     position: fixed;
@@ -312,30 +346,9 @@ BIOGRAPHIE
   }
 
 
-/**** test **/
-.modal-btn {
-    font-size: 145%;
-    background: #fe142f;
-    display: flex;
-    margin: auto;
-    padding: 2em;
-    color: #fff;
-    padding: 0.75rem 2.5rem;
-    border-radius: 1rem;
-    cursor: pointer;
-  }
-  
-  .modal-btn:hover {
-    background: #3876ac;
-  }
-  
-  .footer {
-    margin: 20px;
-    padding: 10px;
-    font-family: var(--font-slab);
-  }
-  
-  /* Modal form */
+/**************************
+* Modal form 
+**************************/
   .bgroundModal {
     display: none;
     position: fixed;
@@ -493,6 +506,127 @@ BIOGRAPHIE
       opacity: 1;
     }
   }
+
+/**************************
+* RESPONSIVE
+**************************/
+  @media only screen and (max-width: 1024px){
+    .bio{
+        position: relative;
+        &-description{
+            text-align: initial;
+        }
+
+        &-btn{
+            position: fixed;
+            top: 50%;
+            left: 50%;
+            margin-top: 100px;
+            margin-left: -60px;
+        }
+
+        &-tags{
+            flex-wrap: wrap;
+        }
+
+
+        &-img{
+            position: absolute;
+            right: 0;
+            width: 100px;
+            height: 100px;
+            border-radius: 50%;
+            object-fit: cover; 
+        }
+    }//.photographe{
+    
+    .filter{
+        display: none;
+    }
+
+    .popular{
+        display: none;
+    }
+        
+  }
+
+
+/*DESKTOP ET PLUS*/
+@media only screen and (min-width: 1101px){
+    .bio{
+        margin: 20px 0;
+        justify-content: space-between;
+        background-color: $background_color_bio;
+        border-radius: 5px;
+        &-description{
+            padding: 2rem;
+            text-align: initial;
+        }
+
+        &-btn{
+            margin-left: 4rem;
+            padding: 1rem;
+        }
+
+        &-portrait{
+            padding: 2rem;
+        }
+
+        &-img{
+            margin: 2.5rem;
+            width: 150px;
+            height: 150px;
+            border-radius: 50%;
+            object-fit: cover;
+        }
+    }//.photographe{
+
+    .popular{
+        width: 200px;
+        display: flex;
+        align-items: center;
+        justify-content: space-around;
+        background-color: $color_background_btn_one;
+        color: $color_black;
+        position: fixed;
+        border-radius: 5px;
+        bottom: 0;
+        right: 20px;
+        i{
+            position: relative;
+            left: -10px;
+        }
+    }
+
+    .portfolio{
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+
+        &-content{
+            width: 30%;
+        }
+
+        &-img{
+            height: 400px;
+        }
+    }
+
+    .ligthbox{
+        padding-top: 10px;
+        &-content {
+            width: 40%;
+        }
+        .slides{
+            width: 100%;
+            &-img{
+                width: 85%;
+                height: 500px;
+                
+            }
+        }
+    }
+}    
   
   
   
